--- a/conf/config.yml
+++ b/conf/config.yml
@@ -9,6 +9,17 @@ source:
       password: password
     query: "select * from all"
     cursor: true
+#  mq:
+#    rabbit:
+#      address:
+#        port: "5672"
+#        ip: 127.0.0.1
+#      user: user
+#      password: password
+#    consumer:
+#      queuename: test
+#      prefetchcount: 64
+#    closetimeout: 5s # время ожидания после последнего полученного сообщения, после которого консумер закрывается
 #  csv:
 #    filename: "data.csv.gz"
 target:
